name:                michaelvessia.github.io
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            www.vessia.net
author:              Michael Vessia
maintainer:          michaelvessia@gmail.com
copyright:           2018 Michael Vessia
category:            Website
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable build-site
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , sitepipe >= 0.1.1
                     , mustache >= 2.2.3
                     , text
  default-language:    Haskell2010
